# NixieClock

./: .gitignore  CMakeLists.txt  NixieClock-Base.stl  NixieClock-Pipe.stl  NixieClock.FCStd  NixieClock.kicad_dru  NixieClock.kicad_pcb  NixieTest.ipynb  README.md  ShiftTest.ipynb  Stencil.FCStd  power-supply.dxf  sdkconfig.defaults  socket.dxf
.github/: copilot-instructions.md
PCB/: NixieClock.kicad_pro  NixieClock.kicad_sch
main/: CMakeLists.txt  Kconfig.projbuild  clock.c  clock.h  effects.c  effects.h  gpio.c  gpio.h  idf_component.yml  leds.c  leds.h  log.c  log.h  main.c  mqtt.c  mqtt.h  nixies.c  nixies.h  nvs.c  nvs.h  ota.c  ota.h
test/: sdkconfig.esp32-c3-devkitm-1
test/.github/: copilot-instructions.md
utils/: cert.sh  colorlog.py  post_ota.py  watch_logs.py
